Building a product image carousel for the ProductScreen

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,12 +54,14 @@ h2 {
 }
 
 .carousel img {
-  height: 300px;
-  padding: 30px;
-  margin: 40px;
-  border-radius: 50%;
 }
 
 .carousel a {
   margin: 0 auto;
+}
+
+.carousel-control-next,
+.carousel-control-prev,
+.carousel-indicators {
+  filter: invert(1) grayscale(100);
 }
