custom sass added to Bootstrap theme

--- a/frontend/src/style/custom.scss
+++ b/frontend/src/style/custom.scss
@@ -1,3 +1,13 @@
+// Bootstrap Theme with BootSwatch LUX theme
+
+// Import Bootstrap/Bootswatch files
+
+@import './variables';
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
+@import './bootswatch';
+
+// Custom CSS rules here
+
 main {
   min-height: 80vh;
 }
