--- a/frontend/src/style/custom.scss
+++ b/frontend/src/style/custom.scss
@@ -79,3 +79,10 @@ h2 {
 .product-screen-carousel .carousel-indicators {
   filter: invert(1) grayscale(100);
 }
+
+input,
+textarea,
+select {
+  border: 1px solid #ced4da !important;
+  border-radius: 0.25rem !important;
+}
